--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   syncfusion_flutter_gauges: ^24.2.7
+  image_picker: ^1.0.4
+  permission_handler: ^11.0.0
+  google_maps_flutter: ^2.5.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
