--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: SukhumvitSet
+      fonts:
+        - asset: font/SukhumvitSet-Text.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
