--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   location: ^5.0.3
   google_maps_flutter: ^2.12.2
   geolocator: ^12.0.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
