--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   google_maps_flutter: ^2.12.2
   geolocator: ^12.0.0
   dio: ^5.3.2
+  camera: ^0.11.1
+  path_provider: ^2.1.5
+  image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
