--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   camera: ^0.11.1
   path_provider: ^2.1.5
   image: ^3.3.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
