--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   path_provider: ^2.1.5
   image: ^3.3.0
   flutter_polyline_points: ^2.1.0
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,14 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/LogoKSI.png"
+  remove_alpha_ios: true
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/LogoKSI.png"
 
 # The following section is specific to Flutter packages.
 flutter:
